# number-recognizer

./: .coverage  .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
documentation/: implementation_document.md  manual.md  project_specification.md  report_week1.md  test_documentation.md  week1_report  week1_report.md  week2_report.md  week3_report.md  week4_report.md  week5_report.md  week6_report.md
documentation/data/: epoch_test_results.csv  layer_test_results.csv  sample_size_test_results.csv
src/: index.py  index_mnist.py  time_complexity_tests.py
src/neural_network/: activation_functions.py  layer.py  loss_functions.py  network.py
src/tests/: error_test.py  index_test.py  layer_test.py  network_test.py
