[tool.poetry]
name = "number-recognizer"
version = "0.1.0"
description = ""
authors = ["Olivia Horjamo <olivia.horjamo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pylint = "^2.15.5"
numpy = "^1.23.4"
autopep8 = "^2.0.0"
matplotlib = "^3.6.2"
invoke = "^1.7.3"
keras = "^2.11.0"


[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
